add trusted by and contact us

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dandia</title>
+
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -221,10 +222,7 @@
                                 <div class="flip-card-back">
                                     <h1>June Mugure</h1>
                                     <p>I've used ride along for a month now.All is required its the application and
-                                        internet access to the internet</p>
-                                    <p>I'ts affordable since i shared the cost with my friends because we were going to
-                                        the same destination</p>
-                                    <p>Thank you ride along</p>
+                                           <p>Thank you ride along</p>
                                 </div>
                             </div>
                         </div>
@@ -248,11 +246,193 @@
                 </div>
             </div>
         </div>
-
-
-
         <!-- USER EXPERIENCE START -->
+        <!-- PATNERS START DOMMIE-->
+        <section class="mt-4 text-center">
 
+            <!-- Dynamically loaded customer logotypes  -->
+            
+<!--Section: Logotypes-->
+<section class="mt-4">
+
+<h5 class="my-4">Trusted by: </h5>
+
+<!-- Logo carousel -->
+<div id="carouselExampleSlidesOnly" class="carousel slide pointer-event" data-ride="carousel" data-interval="1800">
+    <div class="carousel-inner">
+        <!-- First slide -->
+        <div class="carousel-item">
+            <!--Grid row-->
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-lg-3 col-md-6 text-center
+align-items-center justify-content-center">
+                    <img src="./images/logo/ineos.png" class="img-fluid px-4" alt="Nike - logo" style="max-height: 40px">
+                </div>
+                <!--/First column-->
+                <!--Second column-->
+                <div class="col-lg-3 col-md-6 text-center align-items-center justify-content-center">
+                    <img src="./images/logo/jumia.png" class="img-fluid px-4" alt="Amazon - logo" style="max-height: 40px">
+                </div>
+                <!--/Second column-->
+
+                <!--Third column-->
+                <div class="col-lg-3 col-md-6 text-center align-items-center justify-content-center">
+                    <img src="./images/logo/family.png" class="img-fluid px-4" alt="Sony - logo" style="max-height: 40px">
+                </div>
+                <!--/Third column-->
+
+                <!--Fourth column-->
+                <div class="col-lg-3 col-md-6 text-center align-items-center justify-content-center">
+                    <img src="./images/logo/alliance.png" class="img-fluid px-4" alt="Samsung - logo" style="max-height: 40px">
+                </div>
+                <!--/Fourth column-->
+
+            </div>
+            <!--/Grid row-->
+        </div>
+        <!-- First slide -->
+
+        <!-- Second slide -->
+        <div class="carousel-item active carousel-item-left">
+            <!--Grid row-->
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-lg-3 col-md-6 text-center align-items-center justify-content-center">
+                    <img src="./images/logo/andela.png" class="img-fluid px-4" alt="Airbus - logo" style="max-height: 40px">
+                </div>
+                <!--/First column-->
+
+                <!--Second column-->
+                <div class="col-lg-3 col-md-6 text-center align-items-center justify-content-center">
+                    <img src="./images/logo/ntsa.png" class="img-fluid px-4" alt="Yahoo - logo" style="max-height: 40px">
+                </div>
+                <!--/Second column-->
+
+                <!--Third column-->
+                <div class="col-lg-3 col-md-6 text-center align-items-center justify-content-center">
+                    <img src="./images/logo/kenya.png" class="img-fluid px-4" alt="Deloitte - logo" style="max-height: 40px">
+                </div>
+                <!--/Third column-->
+
+                <!--Fourth column-->
+                <div class="col-lg-3 col-md-6 text-center align-items-center justify-content-center">
+                    <img src="./images/logo/safaricom.png" class="img-fluid px-4" alt="GE - logo" style="max-height: 40px">
+                </div>
+                <!--/Fourth column-->
+
+            </div>
+            <!--/Grid row-->
+        </div>
+        <!-- Second slide -->
+    </div>
+</div>
+<!-- Logo carousel -->
+
+</section>
+<!--/Section: Logotypes-->
+
+          </section>
+          <br>
+        <!-- PATNERS END DOMMIE -->
+        <!-- CONTACT US SECTION DOMMIE -->
+        <section id="contact" class="py-5 wow fadeIn" style="background-color: rgb(238, 238, 238); visibility: visible; animation-name: fadeIn;">
+
+            <div class="container">
+
+                <!-- Section heading -->
+                <h2 class="h1-responsive font-weight-bold text-center mb-5 text-dark">Contact us</h2>
+                <!-- Section description -->
+                <p class="text-center w-responsive mx-auto mb-5">Ride Along is always there for your service. Feel free to contact us.</p>
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-md-9 mb-md-0 mb-5">
+
+                    <form>
+
+                        <!-- Grid row -->
+                        <div class="row">
+
+                        <!-- Grid column -->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                            <input type="text" id="contact-name" class="form-control">
+                            <label for="contact-name" class="">Your name</label>
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                            <input type="text" id="contact-email" class="form-control">
+                            <label for="contact-email" class="">Your email</label>
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+
+                        </div>
+                        <!-- Grid row -->
+
+                        <!-- Grid row -->
+                        <div class="row">
+
+                        <!-- Grid column -->
+                        <div class="col-md-12">
+                            <div class="md-form mb-0">
+                            <input type="text" id="contact-Subject" class="form-control">
+                            <label for="contact-Subject" class="">Subject</label>
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+                        </div>
+                        <!-- Grid row -->
+                        <!-- Grid row -->
+                        <div class="row">
+                        <!-- Grid column -->
+                        <div class="col-md-12">
+                            <div class="md-form">
+                            <textarea type="text" id="contact-message" class="form-control md-textarea" rows="3"></textarea>
+                            <label for="contact-message">Your message</label>
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+                        </div>
+                        <!-- Grid row -->
+                    </form>
+                    <div class="text-center text-md-left">
+                        <a class="btn btn-primary btn-md waves-effect waves-light">Send</a>
+                    </div>
+                    </div>
+                    <!-- Grid column -->
+                    <!-- Grid column -->
+                    <div class="col-md-3 text-center">
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                        <i class="fa fa-map-marker fa-2x purple-text"></i>
+                        <p>Ngong Lane Plaza 3rd Floor</p>
+                        </li>
+                        <li>
+                        <i class="fa fa-phone fa-2x mt-4 purple-text"></i>
+                        <p>+254 723 252 294</p>
+                        </li>
+                        <li>
+                        <i class="fa fa-envelope fa-2x mt-4 purple-text"></i>
+                        <p class="mb-0">contact@ridealong.com</p>
+                        </li>
+                    </ul>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- CONTACT US END DOMMIE -->
         <!-- FOOTER START Kolum-->
         <footer>
             <div class="footer-top">
@@ -298,6 +478,7 @@
         <!-- FOOTER END -->
 
     </main>
+
     <!-- JQUERY -->
     <script src="./js/jquery3.3.1.js"></script>
     <!-- BOOTSTRAP JS -->
