--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <h>OUR STORY</h>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="flip-card">
+                        <div class="flip-card round">
                             <div class="flip-card-inner">
                                 <div class="flip-card-front">
                                     <img src="./images/23jose.jpg" style="width:300px;height:300px;">
