--- a/book.html
+++ b/book.html
@@ -53,14 +53,130 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Ride Along Driver</h5>
-                <p class="card-text">NAME: Ronald Kolum</p>
-                <p class="card-text">TIME: Ronald Kolum</p>
+                <p class="card-text"><strong>NAME:</strong> Ronald Kolum</p>
+                <p class="card-text"><strong>Car Make:</strong> Toyota</p>
+                <p class="card-text"><strong>TIME:</strong> 7:00 am</p>
+                <p class="card-text"><STRONG>RATING:</STRONG> <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star-half-o checked"></span>
+                  <span class="fa fa-star"></span></p>
+                <a href="#" class="btn btn-primary">Reserve Seat</a>
+              </div>
+              <div class="card-footer text-success">
+                Online
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card text-center">
+              <div class="card-header">
+                ROUTE: GPO to Thika
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Ride Along Driver</h5>
+                <p class="card-text"><strong>NAME:</strong> Philip Nyatichi</p>
+                <p class="card-text"><strong>Car Make:</strong> Suzuki</p>
+                <p class="card-text"><strong>TIME:</strong> 8:00 am</p>
+                <p class="card-text"><STRONG>RATING:</STRONG> <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star-half-o checked"></span>
+                  <span class="fa fa-star"></span></p>
+                <a href="#" class="btn btn-primary">Reserve Seat</a>
+              </div>
+              <div class="card-footer text-danger">
+                Offline
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card text-center">
+              <div class="card-header">
+                ROUTE: Moringa School to Mathare
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Ride Along Driver</h5>
+                <p class="card-text">NAME: Dust Foot</p>
+                <p class="card-text"><strong>Car Make:</strong> Subaru</p>
+                <p class="card-text">TIME: 9.00 am</p>
                 <p class="card-text">RATING: <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span></p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Reserve Seat</a>
+              </div>
+              <div class="card-footer text-success">
+                Online
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card text-center">
+              <div class="card-header">
+                ROUTE: Kawangware to Kibera
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Ride Along Driver</h5>
+                <p class="card-text">NAME: Joseph Muturi</p>
+                <p class="card-text"><strong>Car Make:</strong> Mitsubishi</p>
+                <p class="card-text">TIME: 10.00 am</p>
+                <p class="card-text">RATING: <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span></p>
+                <a href="#" class="btn btn-primary">Reserve Seat</a>
+              </div>
+              <div class="card-footer text-success">
+                Online
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card text-center">
+              <div class="card-header">
+                ROUTE: Kangemi to GPO
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Ride Along Driver</h5>
+                <p class="card-text">NAME: Kiprotich Korir</p>
+                <p class="card-text"><strong>Car Make:</strong> Honda</p>
+                <p class="card-text">TIME: 11.00 am</p>
+                <p class="card-text">RATING: <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span></p>
+                <a href="#" class="btn btn-primary">Reserve Ride</a>
+              </div>
+              <div class="card-footer text-success">
+                Online
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card text-center">
+              <div class="card-header">
+                ROUTE: Prestige to Junction Mall
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Ride Along Driver</h5>
+                <p class="card-text">NAME: YomZ Samora</p>
+                <p class="card-text"><strong>Car Make:</strong> Nissan</p>
+                <p class="card-text">TIME: 6.00 pm</p>
+                <p class="card-text">RATING: <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span></p>
+                <a href="#" class="btn btn-primary">Reserve Ride</a>
               </div>
               <div class="card-footer text-success">
                 Online
@@ -72,58 +188,6 @@
     </div>
 
     <!-- DRIVERS LIST END -->
-    <!-- HOW IT WORKS START Tichi-->
-    <div class="container-fluid">
-      <div class="container">
-        <h5 class="text-center pt-4">How It Works</h5>
-        <div class="row">
-          <div class="col-sm-4 py-2">
-            <div class="card h-100 border-primary color">
-              <img src="./images/login.svg" class="card-img-top " alt="...">
-              <div class="card-body">
-                <h3 class="card-title">Log In</h3>
-                <p class="card-text">Log on to the dandia app and log in to find a suitable ride or ride
-                  partner
-                  for you from a list of available partners.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-4 py-2">
-            <div class="card h-100 border-primary color">
-              <img src="./images/my.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h3 class="card-title">Find A Ride</h3>
-                <p class="card-text">Find a matching ride partner with the suitable date, time and place
-                  and
-                  request to car pool with them</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-4 py-2">
-            <div class="card h-100 border-primary color">
-              <img src="./images/diver.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h3 class="card-title">Meet Up</h3>
-                <p class="card-text">
-                  Get to agreed meet up point at the agreed upon time and connect with your car pool
-                  mate;
-                  Begin a new and fun experience</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center"><br><br>
-            <button class="btn btn-primary">Begin your Ride along journey</button> <br><br>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- HOW IT WORKS END -->
-
-
     <!-- USER EXPERIENCE START -->
     <!-- PATNERS START DOMMIE-->
     <section class="mt-4 text-center">
