--- a/book.html
+++ b/book.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="js/mdb.min.js" type="text/javascript"></script>
+  <script src="js/main.js" type="text/javascript"></script>
+  <script src="js/jquery3.3.1.js" type="text/javascript"></script>
+  <script src="js/price.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -28,15 +32,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">How It Works</a>
-          </li>
+          
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item active"><a href="#" class="nav-link" data-toggle="modal"
-              data-target="#modalRegisterForm">Sign Up</a></li>
-          <li class="nav-item active"><a href="#" class="nav-link" data-toggle="modal"
-              data-target="#modalLoginForm">Login</a></li>
+              data-target="#modalLoginForm">You are logged in</a></li>
         </ul>
       </div>
     </nav>
@@ -48,7 +48,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="card text-center">
-              <div class="card-header">
+              <div class="card-header uthiru">
                 ROUTE: Prestige to Cooperation(Uthiru)
               </div>
               <div class="card-body">
@@ -61,7 +61,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star-half-o checked"></span>
                   <span class="fa fa-star"></span></p>
-                <a href="#" class="btn btn-primary">Reserve Seat</a>
+                <a href="#" id="reserve" class="btn btn-primary">Reserve Seat</a>
               </div>
               <div class="card-footer text-success">
                 Online
