add modals for successful booking

--- a/book.html
+++ b/book.html
@@ -35,8 +35,7 @@
           
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item active"><a href="#" class="nav-link" data-toggle="modal"
-              data-target="#modalLoginForm">You are logged in</a></li>
+          <li class="nav-item active"><a href="#" class="nav-link" >You are logged in</a></li>
         </ul>
       </div>
     </nav>
@@ -53,7 +52,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Ride Along Driver</h5>
-                <p class="card-text"><strong>NAME:</strong> Ronald Kolum</p>
+                <p class="card-text name"><strong>NAME:</strong> Ronald Kolum</p>
                 <p class="card-text"><strong>Car Make:</strong> Toyota</p>
                 <p class="card-text"><strong>TIME:</strong> 7:00 am</p>
                 <p class="card-text"><STRONG>RATING:</STRONG> <span class="fa fa-star checked"></span>
@@ -61,13 +60,36 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star-half-o checked"></span>
                   <span class="fa fa-star"></span></p>
-                <a href="#" id="reserve" class="btn btn-primary">Reserve Seat</a>
+                <a href="#" id="reserve" class="btn btn-primary" onclick="getData()">Reserve Seat</a>
               </div>
               <div class="card-footer text-success">
                 Online
               </div>
             </div>
           </div>
+          <!-- Button trigger modal -->
+  
+  <!-- Modal -->
+  <div class="modal fade" id="booked" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-center" id="modal-reserved"><h2 class="text-success">Your ride is reserved</h2></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+         <p>You have reserved a ride with <strong>Ronald Kolum</strong> at 7.00am. We hope you have a pleasant trip</p>
+        <p>You can reach him on telephone number <strong>0718 1234567</strong> </p>
+        <p><b>Your ride will cost KSH 200</b></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="reserved" class="btn btn-secondary" onclick="" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
           <div class="col-md-6">
             <div class="card text-center">
               <div class="card-header">
@@ -83,7 +105,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star-half-o checked"></span>
                   <span class="fa fa-star"></span></p>
-                <a href="#" class="btn btn-primary">Reserve Seat</a>
+                <a href="#" id="reserved" class="btn btn-primary"  onclick="getDriver()">Reserve Seat</a>
               </div>
               <div class="card-footer text-danger">
                 Offline
@@ -91,6 +113,26 @@
             </div>
           </div>
         </div>
+        <div class="modal fade" id="booked1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="modal-reserved"><h2>Your ride is reserved</h2></h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                 <p>You have reserved a ride with <strong>Philip Nyatichi</strong> at 7.00am. We hope you have a pleasant trip</p>
+                <p>You can reach him on telephone number <strong>0700 4123456</strong></p>
+                <p><b>Your ride will cost KSH 250</b></p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
         <br>
         <div class="row">
           <div class="col-md-6">
