--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="modal-body mx-3">
                             <div class="md-form mb-5">
                                 <i class="fas fa-envelope prefix grey-text"></i>
-                                <input type="email" id="defaultForm-email" id="userEmail" class="form-control validate"
+                                <input type="email" id="defaultForm-email"  class="form-control validate"
                                     required>
                                 <label data-error="wrong" data-success="right" for="defaultForm-email">Your
                                     email</label>
@@ -82,7 +82,7 @@
 
                             <div class="md-form mb-4">
                                 <i class="fas fa-lock prefix grey-text"></i>
-                                <input type="password" id="defaultForm-pass" id="userPassword"
+                                <input type="password" id="defaultForm-pass" 
                                     class="form-control validate" required>
                                 <label data-error="wrong" data-success="right" for="defaultForm-pass">Your
                                     password</label>
@@ -90,7 +90,7 @@
 
                         </div>
                         <div class="modal-footer d-flex justify-content-center">
-                            <button class="btn btn-default" type="submit" value="submit">Login</button>
+                            <button class="btn btn-default" type="submit" value="submit" onclick="getInfo()"></button>Login</button>
                         </div>
                     </form>
                 </div>
@@ -127,14 +127,14 @@
 
                             <div class="md-form mb-4">
                                 <i class="fas fa-lock prefix grey-text"></i>
-                                <input type="password" id="orangeForm-pass" class="form-control validate" required>
+                                <input type="password" id="orangeForm-pass"  class="form-control validate" required>
                                 <label data-error="wrong" data-success="right" id="password" for="orangeForm-pass">Your
                                     password</label>
                             </div>
 
                         </div>
                         <div class="modal-footer d-flex justify-content-center">
-                            <button class="btn btn-deep-orange" value="submit" type="submit">Sign up</button>
+                            <button class="btn btn-deep-orange" value="submit" type="submit" onclick="signUp()">Sign up</button>
                         </div>
                     </form>
                 </div>
