--- a/book.html
+++ b/book.html
@@ -105,7 +105,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star-half-o checked"></span>
                   <span class="fa fa-star"></span></p>
-                <a href="#" id="reserved" class="btn btn-primary"  onclick="getDriver()">Reserve Seat</a>
+                <a href="#" id="reserve1" class="btn btn-primary"  onclick="getDriver()">Reserve Seat</a>
               </div>
               <div class="card-footer text-danger">
                 Offline
