--- a/book.html
+++ b/book.html
@@ -30,12 +30,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item active"><a href="#" class="nav-link" >You are logged in</a></li>
+          <li class="nav-item active"><a href="#" class="nav-link" ><span class="text-success">Logged in</span> </a></li>
         </ul>
       </div>
     </nav>
